[gd_scene load_steps=12 format=3 uid="uid://2umdypkr8884"]

[ext_resource type="Script" uid="uid://b5a02p1l2ds8v" path="res://scripts/menu/pause_menu.gd" id="1_v4r4p"]
[ext_resource type="FontFile" uid="uid://neecrem67in6" path="res://assets/fonts/CyberpunkCraftpixPixel.otf" id="3_88e76"]
[ext_resource type="Script" uid="uid://bxtwg84krn62m" path="res://scripts/menu/audio_crontrol.gd" id="5_71k7c"]
[ext_resource type="Script" uid="uid://c3om2gr6iab6b" path="res://scripts/menu/fullscreen_control.gd" id="6_cmnsq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.868985, 0.868985, 0.868985, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.60933, 0.60933, 0.60933, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(3.73495e-05, 0.515987, 0.945211, 1)
thickness = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtw2f"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4r4p")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -477.0
offset_top = -218.5
offset_right = 477.0
offset_bottom = -83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 128
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.5
offset_top = -5.5
offset_right = 135.5
offset_bottom = 223.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Resume" type="Button" parent="PauseButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Resume"

[node name="Options" type="Button" parent="PauseButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Options"

[node name="MainMenu" type="Button" parent="PauseButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Main Menu"

[node name="Exit" type="Button" parent="PauseButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -47.0
offset_right = 209.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = 82.5
offset_right = 99.0
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Back"

[node name="OptionsTitle" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 38
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -78.0
offset_right = 154.5
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 20
text = "Music volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_71k7c")

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 31

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 20
text = "SFX volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="HSlider" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8ln24")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_71k7c")

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 74

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 20
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenControl" type="CheckButton" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_88e76")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_rtw2f")
button_pressed = true
script = ExtResource("6_cmnsq")

[connection signal="pressed" from="PauseButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseButtons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseButtons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/MusicVolume" to="Options/VBoxContainer/HBoxContainer/MusicVolume" method="_on_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/MusicVolume" to="Options/VBoxContainer/HBoxContainer/MusicVolume" method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer2/SFXVolume" to="Options/VBoxContainer/HBoxContainer2/SFXVolume" method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/HBoxContainer3/FullscreenControl" to="Options/VBoxContainer/HBoxContainer3/FullscreenControl" method="_on_toggled"]
